<resources>
    <string name="app_name">Images-App</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="timeline">Timeline</string>
    <string name="zichtbareTags">Zichtbare tags: </string>
    <string name="add">Add</string>
    <string name="hintNieuweTag">New tag</string>
    <string name="tag">Tag</string>
    <string name="previewAfbeelding">Preview van het beeld dat men zal gebruiken.</string>
    <string name="hintDescription">Description about the image.</string>
    <string name="tagDubbeldepunt">Tag: </string>
    <string name="voegToe">Add</string>
    <string name="zoekFlickr">Search on Flickr</string>
    <string name="PictureImage">Picture of image</string>
</resources>
