<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?android:windowBackground"
    android:layout_marginTop="?attr/actionBarSize"
    tools:context=".fragments.TimelineFragment">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/timeline_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
         />

<!--The recommended margin for the bottom is 16dp for phones and 24dp for tablets.-->
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabAddImageFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/baseline_add_24"
        app:elevation="0dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="16dp" />

    <!--<android.support.design.widget.FloatingActionButton-->
        <!--android:id="@+id/fab"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_margin="16dp"-->
        <!--android:clickable="true"-->
        <!--android:src="@drawable/ic_done"-->
        <!--/>-->

</RelativeLayout>