<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:minHeight="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp" />

    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <!--<fragment-->
    <!--android:name="com.example.jorit.images_app.fragments.SettingsFragment"-->
    <!--android:id="@+id/settingsFragment"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content" />-->


    </FrameLayout>