<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    android:id="@+id/tagItem"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="16dp">

    <TextView
        android:id="@+id/textTagName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tag"
        android:textAlignment="gravity"
        android:textSize="20sp"/>

</android.support.constraint.ConstraintLayout>

